--- a/2.html
+++ b/2.html
@@ -8,6 +8,7 @@
     <title>Uppgift 2</title>
 </head>
 <body>
+    <span class="info">Jesper Eriksson Stenberg, KYH Frontend.</span>
     <section class="container">
         <h1>Uppgift 2:</h1>
             <p>Skriv ett program som frågar användaren efter två tal och sparar dem i variabler. Sedan ska det skriva ut talens summa, differens och produkt.</p>
