--- a/3.html
+++ b/3.html
@@ -8,6 +8,7 @@
     <title>Uppgift 3</title>
 </head>
 <body>
+    <span class="info">Jesper Eriksson Stenberg, KYH Frontend.</span>
     <section class="container">
         <h1>Uppgift 3:</h1>
             <p>Skriv ett program som frågar användaren efter ett tal. Programmet ska skriva ut talet avrundat till ett heltal. 
