--- a/1.html
+++ b/1.html
@@ -8,6 +8,7 @@
     <title>Uppgift 1</title>
 </head>
 <body>
+    <span class="info">Jesper Eriksson Stenberg, KYH Frontend.</span>
     <section class="container">
         <h1>Uppgift 1:</h1>
             <p>Skriv ett program som frågar vad användaren heter och skriver ut "Välkommen "NN"!" där "NN" är användarens namn.</p>
