--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JS Bootcamp</title>
 </head>
 <body>
+    <span class="info">Jesper Eriksson Stenberg, KYH Frontend.</span>
     
     <section class="container">
         <h1>Välkommen till JSBootcamp Level Up</h1>
