--- a/3.html
+++ b/3.html
@@ -15,7 +15,7 @@
                 Extra utmaning: skriv ut talet avrundat till en decimal i stället.</p>
     </section>
     <section class="container">
-        <p>Hej! Nu ska du skriva ett tal med två decimaler</p>
+        <p>Hej! Nu ska du skriva ett tal med två decimaler. Använd . inte , som decimal för att det ska fungera.</p>
         <input type="text" class="input" id="decimalNumber" placeholder="Decimaltal...">
                
         <p id="results"></p>
