--- a/2.html
+++ b/2.html
@@ -20,6 +20,7 @@
         <p id="results"></p>
         <button class="button" onclick="calculate()">Visa resultat</button>
         <button class="buttonNext" onclick="window.location.href='3.html';">Nästa uppgift</button>
+        <button class="buttonPrevious" onclick="window.location.href='1.html';">Föregående uppgift</button>
         
     </section>
 </body>
